update website layout

--- a/index.html
+++ b/index.html
@@ -1,163 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJJ0JLNGDJ"></script>
-        <script>
-            window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-HJJ0JLNGDJ');
-        </script>
-        <title>Zimeng Lyu</title>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="author" content="Zimeng Lyu"/>
-        <meta name="description" content="Zimeng's little corner of the internet.">
-        <meta property="og:locale" content="en_US"/>
-        <meta property="og:title" content="Zimeng Lyu"/>
-        <meta property="og:url" content="https://zimenglyu.com/"/>
-        <meta property="og:site_name" content="Zimeng Lyu"/>
-        <meta property="og:description" content="Zimeng's little corner of the internet."/>
-        <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet"> -->
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-        <link href="css/main.css" rel="stylesheet"/>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-        <link rel="canonical" href="https://zimenglyu.com/">
-    </head>
-    <body>
-        <div class="wrapper">
-            <header>
-                <img src="img/profile.jpg" alt="profile-picture"/>
-                <h4>Zimeng Lyu</h4>
-                <!-- <p>
-                    <a href="https://blog.zimenglyu.com/">Blog</a>
-                </p> -->
-                <p>
-                    <a href="https://github.com/zimenglyu">GitHub</a>
-                </p>
-                <p>
-                    <a href="https://www.linkedin.com/in/zimenglyu/">LinkedIn</a>
-                </p>
-                <p>
-                    <a href="https://scholar.google.com/citations?user=Rj5sUgkAAAAJ&hl=en">Google Scholer</a>
-                    <!-- \ <a href="https://zimenglyu.com.com/doc/resume.[pdf]">Resume</a> -->
-                </p>
-            </header>
-            <section>
-                <h2>About Me</h2>
-                <!-- <ul class="pub-ul"></ul> -->
-                <p>Hi my name is Zimeng Lyu. I am a PhD student in the <a href="https://www.rit.edu/computing/">B. Thomas Golisano College of Computing and Information Sciences</a> at <a href="https://www.rit.edu/">Rochester Institute of Technology</a>.</p>
-                <!-- <p></p> -->
-                <!-- <h2>Industry</h2>
-                <ul>
-                    <li>
-                        Placeholder for work experiences e.g. Quantifly
-                    </li>
-                </ul> -->
-                <h2>Research Topics</h2>
-                <p>
-                    Online and Offline Time Series Forecasting, Stock Return Predictions.
-                </p>
-                <p>
-                    NeuroEvolution, Neural Architecture Search.
-                </p>
-                <p>
-                    Minimally Supervised Learning, Self Organizing Maps.
-                </p>
-                <p>
-                    My research advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. 
-                    <!-- <li>
-                        NeuroEvolution neural architecture search on 
-                    </li> -->
-                </p>
-                <h2>News</h2>
-                <ul>
-                    <li>
-                        April 2024 - WCCI IJCNN acceptance.
-
-                    <li>
-                        June 2023 - Applied Soft Computing Journal Paper Accepted: <a herf="https://www.sciencedirect.com/science/article/pii/S1568494623005409?casa_token=TZGtQKoJ9cgAAAAA:lYk_74vu2QECxHbyNUeYrmU_AtLTn8yFrp6A6Fk-zNDNvE-WL7i8xOS6Z9KPKN22n7NhmzTS">[Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting]</a>
-                    </li>
-
-                    <li>
-                        Jan 2021 - <a href="http://www.evostar.org/2021/outstanding-students-of-2021/">Evostar 2021 Outstanding Student</a> 
-                    </li>
-                </ul>
-                <!-- <h2>Blog</h2>
-                <ul>
-                    <li>
-                        TensorFlow Lite, Android NDK (<a href="posts/2018-11-27-tflite-android-ndk-eng">ENG</a>, <a href="posts/2018-11-27-tflite-android-ndk-chn">中文</a>)
-                    </li>
-                </ul> -->
-                <h2>Publications</h2>
-                <h3>Journal Articles</h3>
-                <ul class="pub-ul">
-                    <li>
-                        Zimeng Lyu, Alexander Ororbia and Travis Desell. Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting. Applied Soft Computing. June, 2023. <a href="https://www.sciencedirect.com/science/article/pii/S1568494623005409?casa_token=TZGtQKoJ9cgAAAAA:lYk_74vu2QECxHbyNUeYrmU_AtLTn8yFrp6A6Fk-zNDNvE-WL7i8xOS6Z9KPKN22n7NhmzTS">[link]</a> 
-                    </li>
-                    <li>
-                        AbdElRahman ElSaid, Karl Ricanek, Zimeng Lyu, Alexander Ororbia, Travis Desell. Backpropagation-free 4D continuous ant-based neural topology search. Applied Soft Computing. August, 2023. <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462300755X">[link]</a>
-                    </li>
-                    <li>
-                        Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020. <a href="https://www.degruyter.com/document/doi/10.1515/auto-2019-0116/html">[link]</a>
-                    </li>
-                </ul>
-                <h3>Conference Proceedings</h3>
-                <ul class="pub-ul">
-                    <li>
-                        Zimeng Lyu, Pujan Thapa and Travis Desell. Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification. WCCI IJCNN 2024. July, 2024. <a href="https://arxiv.org/abs/2402.11185">[link]</a>
-                    </li>
-                    <li>
-                        Zimeng Lyu and Travis Desell. ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting. The Genetic and Evolutionary Computation Conference (GECCO 2022). Boston, USA. July 9-13, 2022. <a href="https://dl.acm.org/doi/abs/10.1145/3520304.3528962?casa_token=sZla5Lgn2mkAAAAA:ntQmTJiV4SrZRDsIPlAl72xAJlIM3y8D9gl2O1Eog0dlNChPOOCXjL2TkNTFOV2GrRFhI6-Roroe">[link]</a> <a href="papers/2022_gecco_poster.pdf">[poster]</a>
-                    </li>
-
-                    <li>
-                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, and Travis Desell. An experimental study of weight initialization and Lamarckian inheritance on neuroevolution. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 584-600. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Weight_initialization.pdf">[link]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>                  
-                    </li>
-                    <li>
-                        Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid, Mohamed Mkaouer, and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 568-583. Springer, Cham, 2021. <a href="https://link.springer.com/chapter/10.1007/978-3-030-72699-7_37">[link]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>
-                    </li>
-                    <li>
-                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021. <a href="https://dl.acm.org/doi/abs/10.1145/3449726.3463196?casa_token=5k-_g7DVd18AAAAA:kZTfuhCM39FH5HxgKSKzW3h3Vi1xUk5zwVTOvIFt0clKQU8xOY98h7NojeQnpDykfgli1tjpBLkw">[link]</a>
-                    </li>
-                    <li>
-                        Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, and Travis Desell. Efficient Neuroevolution using Island Repopulation and Simplex Hyperparameter Optimization. The 2023 IEEE Symposium Series on Computational Intelligence (SSCI 2023). Mexico City, Mexico. December 5-8, 2023. h5-index: 29. <a href="https://ieeexplore.ieee.org/abstract/document/10371872">[link]</a>
-                    </li>
-                    <li>
-                        Amit Dilip Kini∗, Swaraj Sambhaji Yadav∗, Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, and Travis Desell. Co-evolving Recurrent Neural Networks and their Hyperparameters with Simplex Hyperparameter Optimization. The Genetic and Evolutionary Computation Conference Companion (GECCO ’23 Companion). Lisbon, Portugal. July 15–19, 2023. *Indicates equal contribution. h5-index: 29. <a href="https://dl.acm.org/doi/abs/10.1145/3583133.3596407">[link]</a>
-                    </li>
-                    <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021. <a href="https://arxiv.org/abs/2011.10831">[link]</a>
-                    </li>
-                    <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia and Travis Desell. Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation. The Genetic and Evolutionary Computation Conference (GECCO 2020). Cancun, Mexico. July 8-12, 2020. Best paper nominee. <a href="https://dl.acm.org/doi/abs/10.1145/3377930.3390193">[link]</a>
-                    </li>
-                    <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020. <a href="https://link.springer.com/chapter/10.1007/978-3-030-43722-0_39">[link]</a>
-                    </li>
-                </ul>
-                <h3>Preprints</h3>
-                <ul class="pub-ul">
-                    <li>
-                        Zimeng Lyu, Alexander Ororbia and Travis Desell. Minimally Supervised Learning using Topological Projections in Self-Organizing Maps. arXiv: Machine Learning (cs.ML). January, 2024. <a href="https://arxiv.org/abs/2401.06923">[link]</a> 
-                    </li>
-                    <li>
-                        Zimeng Lyu, Pujan Thapa and Travis Desell. Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification. arXiv: Machine Learning (cs.ML). February, 2024. <a href="https://arxiv.org/abs/2402.11185">[link]</a>
-                    </li>
-                    <li>
-                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. A Experimental Study of Weight Initialization and Weight Inheritance Effects on Neuroevolution. arXiv: Computation and Language (cs.CL). September, 2020. <a href="https://arxiv.org/abs/2009.09644">[link]</a> 
-                    </li>
-                    <li>
-                        Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid and Travis Desell. Improving Neuroevolution Using Island Extinction and Repopulation. arXiv: Neural and Evolutionary Computing (cs.NE). May, 2020. <a href="https://arxiv.org/abs/2005.07376">[link]</a> 
-                    </li>
-                    <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. arXiv: Computation and Language (cs.CL). November, 2020. <a href="https://arxiv.org/abs/2011.10831">[link]</a> 
-                    </li>
-
-
-
-                </ul>
-            </section>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zimeng Lyu - Personal Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="nav-logo">Zimeng Lyu</a>
+            <div class="nav-links">
+                <a href="index.html" class="nav-link active">Home</a>
+                <a href="research.html" class="nav-link">Research</a>
+                <a href="publications.html" class="nav-link">Publications</a>
+                <a href="teaching.html" class="nav-link">Teaching</a>
+            </div>
         </div>
-        <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="1599ed9b9a62fcc09bb6b928-|49" defer=""></script>
-    </body>
+    </nav>
+
+    <main role="main">
+        <section class="hero" data-aos="fade-up">
+            <div class="hero-content">
+                <div class="hero-image">
+                    <img src="img/profile.jpg" alt="Zimeng Lyu" class="profile-image">
+                </div>
+                <div class="hero-text">
+                    <h1>Zimeng Lyu</h1>
+                    <h2>Ph.D. Candidate</h2>
+                    <p class="hero-bio">
+                        Specializing in Time Series Forecasting, Stock Return Prediction,
+                        Continue Learning, and Neural Architecture Search. Published in top-tier
+                        venues like GECCO and Applied Soft Computing.
+                    </p>
+                    <div class="hero-links">
+                        <a href="https://github.com/zimenglyu" class="social-link">GitHub</a>
+                        <a href="https://www.linkedin.com/in/zimenglyu/" class="social-link">LinkedIn</a>
+                        <a href="https://scholar.google.com/citations?user=Rj5sUgkAAAAJ&hl=en" class="social-link">Google Scholar</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section" data-aos="fade-up">
+            <h2 id="research-areas" class="section-title">Research Areas</h2>
+            <div class="research-grid">
+                <div class="research-card">
+                    <h3>Time Series Forecasting</h3>
+                    <p>Online and Offline Time Series Forecasting, Stock Return Predictions</p>
+                </div>
+                <div class="research-card">
+                    <h3>Neural Architecture</h3>
+                    <p>NeuroEvolution, Neural Architecture Search</p>
+                </div>
+                <div class="research-card">
+                    <h3>Machine Learning</h3>
+                    <p>Minimally Supervised Learning, Self Organizing Maps</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section" data-aos="fade-up">
+            <h2 id="latest-news" class="section-title">Latest News</h2>
+            <div class="news-grid">
+                <div class="news-card">
+                    <div class="news-date">April 2024</div>
+                    <div class="news-content">
+                        <h3>WCCI IJCNN acceptance</h3>
+                    </div>
+                </div>
+                <div class="news-card">
+                    <div class="news-date">June 2023</div>
+                    <div class="news-content">
+                        <h3>Applied Soft Computing Journal Paper Accepted</h3>
+                        <p>Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting</p>
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1568494623005409" class="news-link">Read Paper</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section" data-aos="fade-up">
+            <h2 id="featured-publications" class="section-title">Featured Publications</h2>
+            <div class="featured-publications">
+                <div class="publication-card">
+                    <h3>Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting</h3>
+                    <p class="publication-authors">Zimeng Lyu, Alexander Ororbia and Travis Desell</p>
+                    <p class="publication-venue">Applied Soft Computing, June 2023</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                        <a href="#" class="pub-link">Code</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-social">
+                    <a href="https://github.com/zimenglyu" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/zimenglyu/" target="_blank">LinkedIn</a>
+                    <a href="https://scholar.google.com/citations?user=Rj5sUgkAAAAJ&hl=en" target="_blank">Google Scholar</a>
+                </div>
+                <p>© 2024 Zimeng Lyu. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+</body>
 </html>
