--- a/research.html
+++ b/research.html
@@ -6,18 +6,18 @@
     <title>Research - Zimeng Lyu</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/research.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/research.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">Zimeng Lyu</a>
+            <a href="./" class="nav-logo">Zimeng Lyu</a>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="research.html" class="nav-link active">Research</a>
-                <a href="publications.html" class="nav-link">Publications</a>
-                <a href="teaching.html" class="nav-link">Teaching</a>
+                <a href="./" class="nav-link">Home</a>
+                <a href="./research.html" class="nav-link active">Research</a>
+                <a href="./publications.html" class="nav-link">Publications</a>
+                <a href="./teaching.html" class="nav-link">Teaching</a>
             </div>
         </div>
     </nav>
