--- a/teaching.html
+++ b/teaching.html
@@ -6,8 +6,8 @@
     <title>Teaching - Zimeng Lyu</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/teaching.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/teaching.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -15,12 +15,12 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">Zimeng Lyu</a>
+            <a href="./" class="nav-logo">Zimeng Lyu</a>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="research.html" class="nav-link">Research</a>
-                <a href="publications.html" class="nav-link">Publications</a>
-                <a href="teaching.html" class="nav-link active">Teaching</a>
+                <a href="./" class="nav-link">Home</a>
+                <a href="./research.html" class="nav-link">Research</a>
+                <a href="./publications.html" class="nav-link">Publications</a>
+                <a href="./teaching.html" class="nav-link active">Teaching</a>
             </div>
         </div>
     </nav>
