--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimeng Lyu - Personal Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">Zimeng Lyu</a>
+            <a href="./" class="nav-logo">Zimeng Lyu</a>
             <div class="nav-links">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="research.html" class="nav-link">Research</a>
-                <a href="publications.html" class="nav-link">Publications</a>
-                <a href="teaching.html" class="nav-link">Teaching</a>
+                <a href="./" class="nav-link active">Home</a>
+                <a href="./research.html" class="nav-link">Research</a>
+                <a href="./publications.html" class="nav-link">Publications</a>
+                <a href="./teaching.html" class="nav-link">Teaching</a>
             </div>
         </div>
     </nav>
@@ -25,7 +25,7 @@
         <section class="hero" data-aos="fade-up">
             <div class="hero-content">
                 <div class="hero-image">
-                    <img src="img/profile.jpg" alt="Zimeng Lyu" class="profile-image">
+                    <img src="./img/profile.jpg" alt="Zimeng Lyu" class="profile-image">
                 </div>
                 <div class="hero-text">
                     <h1>Zimeng Lyu</h1>
