--- a/publications.html
+++ b/publications.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - Zimeng Lyu</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/publications.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/publications.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -15,12 +15,12 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">Zimeng Lyu</a>
+            <a href="./" class="nav-logo">Zimeng Lyu</a>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="research.html" class="nav-link">Research</a>
-                <a href="publications.html" class="nav-link active">Publications</a>
-                <a href="teaching.html" class="nav-link">Teaching</a>
+                <a href="./" class="nav-link">Home</a>
+                <a href="./research.html" class="nav-link">Research</a>
+                <a href="./publications.html" class="nav-link active">Publications</a>
+                <a href="./teaching.html" class="nav-link">Teaching</a>
             </div>
         </div>
     </nav>
