update publication list

--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
                 <div class="publication-card">
                     <h3>Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting</h3>
                     <p class="publication-authors">Zimeng Lyu, Alexander Ororbia and Travis Desell</p>
-                    <p class="publication-venue">Applied Soft Computing, June 2023</p>
+                    <p class="publication-venue">Applied Soft Computing, 2023 (IF: 8.7)</p>
                     <div class="publication-links">
                         <a href="https://www.sciencedirect.com/science/article/pii/S1568494623005409" class="pub-link">Paper</a>
                         <a href="#" class="pub-link">Code</a>
@@ -55,9 +55,19 @@
                 <div class="publication-card">
                     <h3>Backpropagation-free 4D continuous ant-based neural topology search</h3>
                     <p class="publication-authors">AbdElRahman ElSaid, Karl Ricanek, Zimeng Lyu, Alexander Ororbia, Travis Desell</p>
-                    <p class="publication-venue">Applied Soft Computing, August 2023</p>
+                    <p class="publication-venue">Applied Soft Computing, 2023 (IF: 8.7)</p>
                     <div class="publication-links">
                         <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462300755X" class="pub-link">Paper</a>
+                        <a href="#" class="pub-link">Cite</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks</h3>
+                    <p class="publication-authors">Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan, Steve Benson</p>
+                    <p class="publication-venue">at - Automatisierungstechnik, Volume 68(2):130-139, 2020</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
                         <a href="#" class="pub-link">Cite</a>
                     </div>
                 </div>
@@ -69,16 +79,112 @@
             <h2 class="section-title">Conference Proceedings</h2>
             <div class="publications-grid">
                 <div class="publication-card">
-                    <h3>Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification</h3>
-                    <p class="publication-authors">Zimeng Lyu, Pujan Thapa and Travis Desell</p>
-                    <p class="publication-venue">WCCI IJCNN 2024, July 2024</p>
+                    <h3>Evolving RNNs for Stock Forecasting: A Low Parameter Efficient Alternative to Transformers</h3>
+                    <p class="publication-authors">Zimeng Lyu, Devroop Kar, Matthew Simoni, Rohaan Nadeem, Avinash Bhojanapalli</p>
+                    <p class="publication-venue">Evostar 2025</p>
                     <div class="publication-links">
-                        <a href="https://arxiv.org/abs/2402.11185" class="pub-link">Paper</a>
-                        <a href="#" class="pub-link">Slides</a>
+                        <a href="#" class="pub-link">Paper</a>
                     </div>
                 </div>
 
-                <!-- Add more conference papers -->
+                <div class="publication-card">
+                    <h3>Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification</h3>
+                    <p class="publication-authors">Zimeng Lyu, Pujan Thapa, Travis Desell</p>
+                    <p class="publication-venue">IEEE WCCI 2024</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Enabling An Informed Contextual Multi-Armed Bandit Framework For Stock Trading With Neuroevolution</h3>
+                    <p class="publication-authors">Devroop Kar, Zimeng Lyu, Alexander G. Ororibia, Travis Desell, Daniel Krutz</p>
+                    <p class="publication-venue">GECCO 2024</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Efficient Neuroevolution using Island Repopulation and Simplex Hyperparameter Optimization</h3>
+                    <p class="publication-authors">Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, Travis Desell</p>
+                    <p class="publication-venue">SSCI 2023</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Co-evolving Recurrent Neural Networks and their Hyperparameters with Simplex Hyperparameter Optimization</h3>
+                    <p class="publication-authors">Amit Dilip Kini, Swaraj Sambhaji Yadav, Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, Travis Desell</p>
+                    <p class="publication-venue">GECCO 2023</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting</h3>
+                    <p class="publication-authors">Zimeng Lyu, Travis Desell</p>
+                    <p class="publication-venue">GECCO 2022</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data</h3>
+                    <p class="publication-authors">Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, Travis Desell</p>
+                    <p class="publication-venue">GECCO 2021</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution</h3>
+                    <p class="publication-authors">Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, Travis Desell</p>
+                    <p class="publication-venue">EvoApps 2021</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Improving Distributed Neuroevolution Using Island Extinction and Repopulation</h3>
+                    <p class="publication-authors">Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid, Mohamed Mkaouer, Travis Desell</p>
+                    <p class="publication-venue">EvoApps 2021</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Continuous Ant-Based Neural Topology Search</h3>
+                    <p class="publication-authors">AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia, Travis Desell</p>
+                    <p class="publication-venue">EvoApps 2021</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation</h3>
+                    <p class="publication-authors">AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia, Travis Desell</p>
+                    <p class="publication-venue">GECCO 2020</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Neuro-Evolutionary Transfer Learning through Structural Adaptation</h3>
+                    <p class="publication-authors">AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia, Travis Desell</p>
+                    <p class="publication-venue">EvoApps 2020</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -87,12 +193,71 @@
             <h2 class="section-title">Preprints</h2>
             <div class="publications-grid">
                 <div class="publication-card">
-                    <h3>Minimally Supervised Learning using Topological Projections in Self-Organizing Maps</h3>
-                    <p class="publication-authors">Zimeng Lyu, Alexander Ororbia and Travis Desell</p>
-                    <p class="publication-venue">arXiv: Machine Learning (cs.ML), January 2024</p>
+                    <h3>Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification</h3>
+                    <p class="publication-authors">Zimeng Lyu, Pujan Thapa, Travis Desell</p>
+                    <p class="publication-venue">arXiv, 2024</p>
                     <div class="publication-links">
-                        <a href="https://arxiv.org/abs/2401.06923" class="pub-link">Paper</a>
-                        <a href="#" class="pub-link">Code</a>
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Neuroevolution Neural Architecture Search for Evolving RNNs in Stock Return Prediction and Portfolio Trading</h3>
+                    <p class="publication-authors">Zimeng Lyu, Amulya Saxena, Rohaan Nadeem, Hao Zhang, Travis Desell</p>
+                    <p class="publication-venue">arXiv, 2024</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Minimally supervised learning using topological projections in self-organizing maps</h3>
+                    <p class="publication-authors">Zimeng Lyu, Alexander Ororbia, Rui Li, Travis Desell</p>
+                    <p class="publication-venue">arXiv, 2024</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>A Experimental Study of Weight Initialization and Weight Inheritance Effects on Neuroevolution</h3>
+                    <p class="publication-authors">Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, Travis Desell</p>
+                    <p class="publication-venue">arXiv, 2020</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Improving Neuroevolution Using Island Extinction and Repopulation</h3>
+                    <p class="publication-authors">Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid, Travis Desell</p>
+                    <p class="publication-venue">arXiv, 2020</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+
+                <div class="publication-card">
+                    <h3>Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation</h3>
+                    <p class="publication-authors">AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia II, Daniel Krutz, Travis Desell</p>
+                    <p class="publication-venue">arXiv, 2020</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Manuscripts Under Review -->
+        <section class="section" data-aos="fade-up">
+            <h2 class="section-title">Manuscripts Under Review</h2>
+            <div class="publications-grid">
+                <div class="publication-card">
+                    <h3>Minimally Supervised Learning Using Topological Projections in Self-Organizing Maps</h3>
+                    <p class="publication-authors">Zimeng Lyu, Alexander Ororbia, Rui Li, Travis Desell</p>
+                    <p class="publication-venue">Engineering Applications of Artificial Intelligence, 2025</p>
+                    <div class="publication-links">
+                        <a href="#" class="pub-link">Paper</a>
                     </div>
                 </div>
             </div>
